# ETL_STOCK

./: .gitignore  README.md  hello.py  main.py  pyproject.toml  requeriments.txt
src/: database.py  main.py
